// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataManager Component DataManager Snapshot 1`] = `
<body>
  <div>
    <h1>
      correct data
    </h1>
  </div>
</body>
`;

exports[`DataManager Component DataManager Snapshot 2`] = `
<body>
  <div>
    <h1>
      correct data
    </h1>
  </div>
  .c0 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
    <div
      class="c0"
    >
      <img
        alt="loading"
        src="https://createwebsite.net/wp-content/uploads/2015/09/Display-Loading.gif"
      />
    </div>
  </div>
</body>
`;

exports[`DataManager Component DataManager Snapshot 3`] = `
<body>
  <div>
    <h1>
      correct data
    </h1>
  </div>
  <div>
    <div
      class="sc-AxjAm kSkoow"
    >
      <img
        alt="loading"
        src="https://createwebsite.net/wp-content/uploads/2015/09/Display-Loading.gif"
      />
    </div>
  </div>
  .c0 {
  margin-top: 50px;
  background-color: red;
  width: 100%;
  height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 label {
  font-family: Helvetica;
  color: #ffffff;
  font-size: 15px;
}

<div>
    <div
      class="c0"
    >
      <label>
        We're having problems Searching Gnomes, try it in a few minutes
      </label>
    </div>
  </div>
</body>
`;
